@@ -77,6 +77,7 @@ Small features:
     calling hwloc-ps
 Small changes:
   * New configure option --disable-build-doc-pdf
+  * Move MPI cache functions into the public API
 
 StarPU 1.3.3 (git revision 11afc5b007fe1ab1c729b55b47a5a98ef7f3cfad)
 ====================================================================
